--- a/main_model.ipynb
+++ b/main_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10,10 +10,10 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package twitter_samples to\n",
-      "[nltk_data]     /Users/timliu/nltk_data...\n",
+      "[nltk_data]     /Users/hienanh/nltk_data...\n",
       "[nltk_data]   Package twitter_samples is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/timliu/nltk_data...\n",
+      "[nltk_data]     /Users/hienanh/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -39,13 +39,14 @@
     "import re\n",
     "import os\n",
     "import string\n",
-    "from collections import Counter\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
-    "from sklearn.metrics import confusion_matrix,classification_report, accuracy_score\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "# from collections import Counter\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.pipeline import Pipeline\n",
+    "# from sklearn.naive_bayes import MultinomialNB\n",
+    "# from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
+    "# from sklearn.metrics import confusion_matrix,classification_report, accuracy_score\n",
+    "# from sklearn.linear_model import LogisticRegression\n",
+    "\n",
     "import nltk \n",
     "nltk.download('twitter_samples')\n",
     "from nltk.corpus import twitter_samples\n",
@@ -1651,7 +1652,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7",
+   "display_name": "Python 3.8.13 ('ARP')",
    "language": "python",
    "name": "python3"
   },
@@ -1665,12 +1666,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+    "hash": "1ce6e105562a8cb3fed6b8c23b17d1f7b9ed997507fe8f705f5f3f07a92a5335"
    }
   }
  },
